# KWCToolkit

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  WORKSPACE  conanfile.txt
kwctoolkit/app/: App.cc  App.h  AppTest.cc  BUILD  CMakeLists.txt  Main.cc  app.cc  app.h  app_info.h.in  app_test.cc  main.cc
kwctoolkit/audio/: BUILD  CMakeLists.txt  Dft.h  PcmUtils.cc  PcmUtils.h  SineGenerator.cc  SineGenerator.h  pcm_utils.cc  pcm_utils.h  sine_generator.cc  sine_generator.h
kwctoolkit/base/: ArrayCopyTest.cc  ArraySize.h  ArraySizeTest.cc  Assert.cc  Assert.h  BUILD  CMakeLists.txt  Callback.h  CallbackImpl.h  CallbackTest.cc  Check.cc  Check.h  CheckedInteger.h  CheckedIntegerTest.cc  CmdlineFlags.cc  CmdlineFlags.h  CmdlineFlagsTest.cc  Error.h  ErrorTrace.cc  ErrorTrace.h  ForEachArgumentTest.cc  IntegralTypes.h  Logging.cc  Logging.h  RefCount.cc  RefCount.h  RefCountTest.cc  Result.cc  Result.h  ResultTest.cc  RwProtected.h  ScopeGuard.h  ScopeGuardTest.cc  Status.cc  Status.h  Utils.h  UtilsTest.cc  array_copy_test.cc  array_size_test.cc  assert.cc  (+36 more)
kwctoolkit/file/: BUILD  CMakeLists.txt  File.cc  File.h  FileEnumerator.cc  FileEnumerator.h  FileEnumeratorTest.cc  FileInfo.cc  FileInfo.h  FilePath.cc  FilePath.h  FilePathConstants.h  FilePathTest.cc  FileTest.cc  FileUtils.cc  FileUtils.h  file.cc  file.h  file_enumerator.cc  file_enumerator.h  file_enumerator_test.cc  file_info.cc  file_info.h  file_path.cc  file_path_constants.h  file_path_test.cc  file_test.cc  file_utils.cc  file_utils.h
kwctoolkit/image/: BUILD  CMakeLists.txt  Image.cc  Image.h  ImageDecoder.cc  ImageDecoder.h  Metadata.cc  Metadata.h  PngDecoder.cc  PngDecoder.h  image.cc  image.h  image_decoder.cc  image_decoder.h  image_utils.cc  image_utils.h  metadata.cc  metadata.h  png_decoder.cc  png_decoder.h
kwctoolkit/net/: Address.h  AddressIpv4.cc  AddressIpv4.h  AddressIpv4Test.cc  AddressIpv6.cc  AddressIpv6.h  AddressIpv6Test.cc  AddressTest.cc  AddressTypes.h  BUILD  CMakeLists.txt  address.h  address_ipv4.cc  address_ipv4.h  address_ipv4_test.cc  address_ipv6.cc  address_ipv6.h  address_ipv6_test.cc  address_test.cc  address_types.h
kwctoolkit/serialization/: BUILD  CMakeLists.txt  DataReader.cc  DataReader.h  DataReaderTest.cc  DataWriter.cc  DataWriter.h  DataWriterTest.cc  InMemoryDataReader.cc  IstreamDataReader.cc  StringDataWriter.cc  data_reader.cc  data_reader.h  data_reader_test.cc  data_writer.cc  data_writer.h  data_writer_test.cc  in_memory_data_reader.cc  istream_data_reader.cc  string_data_writer.cc
kwctoolkit/strings/: BUILD  CMakeLists.txt  StringSplit.cc  StringSplitTest.cc  StringSwitch.h  StringSwitchTest.cc  StringUtils.cc  UtfStringConversion.cc  string_split.cc  string_split_test.cc  string_switch.h  string_switch_test.cc  string_utils.cc  utf_string_conversion.cc  utf_string_conversion.h
kwctoolkit/system/: AlignedAlloc.cc  AlignedAlloc.h  AlignedAllocTest.cc  BUILD  CMakeLists.txt  Cmdline.cc  Cmdline.h  CmdlineTest.cc  Cpu.cc  Cpu.h  Environment.cc  Environment.h  EnvironmentTest.cc  Executor.cc  Executor.h  FeatureList.cc  FeatureList.h  ProcessInternalLinux.cc  ProcessInternalLinux.h  Sleep.cc  Sleep.h  SystemInfo.cc  SystemInfo.h  SystemInfoLinux.cc  SystemInfoMac.mm  SystemInfoPosix.cc  SystemInfoTest.cc  SystemInfoWin.cc  SystemMemoryInfo.h  SystemMemoryInfoLinux.cc  SystemMemoryInfoMac.mm  SystemMemoryInfoWin.cc  Thread.cc  Thread.h  ThreadHelper.h  ThreadTest.cc  ThreadTypes.cc  ThreadTypes.h  TimerLinux.cc  TimerMac.cc  (+41 more)
kwctoolkit/transport/: BUILD  CMakeLists.txt  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  HttpTransaction.cc  HttpTransaction.h  HttpTransactionTest.cc  HttpTypes.h  SimpleHttpTransaction.cc  SimpleHttpTransaction.h  http_request.cc  http_request.h  http_response.cc  http_response.h  http_transaction.cc  http_transaction.h  http_transaction_test.cc  http_types.h  simple_http_transaction.cc  simple_http_transaction.h
kwctoolkit/utils/: BUILD  Base64.cc  Base64Test.cc  Benchmark.h  CMakeLists.txt  ColorPrint.cc  Levenshtein.h  LevenshteinTest.cc  Regex.cc  RegexTest.cc  ZipTest.cc  base64.cc  base64.h  base64_test.cc  benchmark.h  color_print.cc  levenshtein.h  levenshtein_test.cc  regex.cc  regex_test.cc  zip.h  zip_test.cc
src/: CMakeLists.txt
src/app/: App.cc  App.h  AppTest.cc  CMakeLists.txt  Main.cc  app.cc  app.h  app_info.h.in  app_test.cc  main.cc
src/audio/: PcmUtils.cc  PcmUtils.h  SineGenerator.cc  SineGenerator.h
src/base/: ArrayCopyTest.cc  ArraySize.h  ArraySizeTest.cc  Assert.cc  Assert.h  BUILD  CMakeLists.txt  Callback.h  CallbackImpl.h  Check.cc  Check.h  CheckedInteger.h  CmdlineFlags.cc  CmdlineFlags.h  Compiler.h  Error.h  ErrorTrace.cc  ErrorTrace.h  ForEachArgumentTest.cc  IntegralTypes.h  Logging.cc  Logging.h  Macros.h  Platform.h  RefCount.cc  RefCount.h  Result.cc  Result.h  ResultTest.cc  ScopeGuard.h  ScopeGuardTest.cc  Status.cc  Status.h  array_copy.h  array_copy_test.cc  array_size_test.cc  assert.cc  assert.h  build_flags_internal.h.in  callback.h  (+39 more)
src/file/: CMakeLists.txt  File.cc  FileEnumerator.cc  FileEnumerator.h  FileInfo.cc  FileInfo.h  FilePath.cc  FilePath.h  FilePathTest.cc  FileTest.cc  FileUtils.cc  FileUtils.h  file.cc  file.h  file_enumerator.cc  file_enumerator.h  file_enumerator_test.cc  file_info.cc  file_info.h  file_path.cc  file_path.h  file_path_test.cc  file_test.cc  file_utils.cc  file_utils.h
src/image/: CMakeLists.txt  Image.cc  Image.h  ImageDecoder.cc  ImageDecoder.h  Metadata.cc  Metadata.h  PngDecoder.cc  PngDecoder.h  image.cc  image.h  image_decoder.cc  image_decoder.h  metadata.cc  metadata.h  png_decoder.cc  png_decoder.h
src/net/: Address.h  AddressIpv4.cc  AddressIpv6.cc  AddressIpv6.h  AddressIpv6Test.cc  AddressTest.cc  CMakeLists.txt  address.h  address_ipv4.cc  address_ipv4.h  address_ipv4_test.cc  address_ipv6.cc  address_ipv6.h  address_ipv6_test.cc  address_test.cc
src/serialization/: CMakeLists.txt  (+18 more)
tests/: Assets.h.in  BUILD  CMakeLists.txt  UnittestsMain.cc
(+178 files in other folders)
