# Copyright (c) 2021, Kai Wolf - SW Consulting. All rights reserved.
# For the licensing terms see LICENSE file in the root directory. For the
# list of contributors see the AUTHORS file in the same directory.

add_subdirectory(base)
add_subdirectory(file)
add_subdirectory(image)
add_subdirectory(net)
add_subdirectory(serialization)
add_subdirectory(strings)
add_subdirectory(system)
add_subdirectory(transport)
add_subdirectory(utils)

add_subdirectory(app)
